@@ -532,41 +532,41 @@ STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Add Entry"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
+    LTEXT           "To add a new entry to the current password \ndatabase, simply fill in the fields below. At least a title and a \npassword are required.  If you have set a default username, it \nwill be appear in the username field.",
+                    IDC_STATIC,7,9,261,24
     LTEXT           "Group:",IDC_STATIC,7,42,22,8
     COMBOBOX        IDC_GROUP,44,40,109,128,CBS_DROPDOWN | CBS_SORT | 
                     WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Title:",IDC_STATIC,7,58,16,8
     EDITTEXT        IDC_TITLE,44,55,109,14,ES_AUTOHSCROLL
+    LTEXT           "Username:",IDC_STATIC,7,74,35,8
     EDITTEXT        IDC_USERNAME,44,71,109,14,ES_AUTOHSCROLL
+    LTEXT           "Password:",IDC_STATIC,7,90,34,8
     EDITTEXT        IDC_PASSWORD,44,87,109,14,ES_PASSWORD | ES_AUTOHSCROLL
+    LTEXT           "Confirm Password:",IDC_STATIC,7,103,34,15
     EDITTEXT        IDC_PASSWORD2,44,103,109,14,ES_PASSWORD | ES_AUTOHSCROLL | 
                     WS_DISABLED
     PUSHBUTTON      "&Show",IDC_SHOWPASSWORD,165,86,37,15,BS_CENTER
     PUSHBUTTON      "Generate",IDC_RANDOM,214,126,54,14
+    LTEXT           "Notes:",IDC_STATIC,7,122,22,8
     EDITTEXT        IDC_NOTES,44,120,158,78,ES_MULTILINE | ES_AUTOVSCROLL | 
                     ES_WANTRETURN | WS_VSCROLL
+    LTEXT           "URL:",IDC_STATIC_URL,7,204,18,8
     EDITTEXT        IDC_URL,44,203,158,14,ES_AUTOHSCROLL
+    LTEXT           "Autotype:",IDC_STATIC_AUTO,7,225,31,8
     EDITTEXT        IDC_AUTOTYPE,44,220,109,14,ES_AUTOHSCROLL
     DEFPUSHBUTTON   "OK",IDOK,209,39,59,14
     PUSHBUTTON      "Cancel",IDCANCEL,209,55,59,14
     PUSHBUTTON      "Help (F1)",ID_HELP,209,71,59,14
-    LTEXT           "Title:",IDC_STATIC,7,58,16,8
-    LTEXT           "Username:",IDC_STATIC,7,74,35,8
-    LTEXT           "Password:",IDC_STATIC,7,90,34,8
-    LTEXT           "Confirm Password:",IDC_STATIC,7,103,34,15
-    LTEXT           "Notes:",IDC_STATIC,7,122,22,8
-    LTEXT           "To add a new entry to the current password database, simply fill in the fields below. At least a title and a password are required.  If you have set a default username, it should already be entered into the username field.",
-                    IDC_STATIC,7,9,261,24
     GROUPBOX        "Random Password",IDC_STATIC,209,116,68,51
     CONTROL         "Override Policy",IDC_OVERRIDE_POLICY,"Button",
                     BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,215,142,41,
                     22
-    PUSHBUTTON      "More >>",IDC_MORE,209,173,59,14
-    LTEXT           "URL:",IDC_STATIC_URL,7,204,18,8
-    LTEXT           "Autotype:",IDC_STATIC_AUTO,7,225,31,8
+    PUSHBUTTON      "&More >>",IDC_MORE,209,173,59,14
+    PUSHBUTTON      "&Clear",IDC_LTIME_CLEAR,209,248,22,14
+    PUSHBUTTON      "&Set",IDC_LTIME_SET,242,248,22,14
     LTEXT           "Password expires on:",IDC_STATIC_LTIME,11,251,67,8
-    PUSHBUTTON      "Clear",IDC_LTIME_CLEAR,209,248,22,14
-    PUSHBUTTON      "Set",IDC_LTIME_SET,242,248,22,14
-    LTEXT           "Whenever",IDC_LTIME,81,251,120,8
+    LTEXT           "Whenever",IDC_LTIME,81,251,120,8,WS_TABSTOP
     CONTROL         "",IDC_TOP_HIDEABLE,"Static",SS_ETCHEDHORZ | NOT 
                     WS_VISIBLE,7,200,270,1
     CONTROL         "Keep",IDC_SAVE_PWHIST,"Button",BS_AUTOCHECKBOX | 
@@ -586,61 +586,57 @@ STYLE DS_SETFONT | DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Edit/View Entry"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
+    LTEXT           "To edit this entry from the current password file, simply make the desired changes in the fields below.  Note that at least a title and a password are required.",
+                    IDC_STATIC,6,7,271,19
+    LTEXT           "Group:",IDC_STATIC,6,36,22,8
     COMBOBOX        IDC_GROUP,52,34,109,128,CBS_DROPDOWN | CBS_SORT | 
                     WS_VSCROLL | WS_TABSTOP
+    LTEXT           "Title:",IDC_STATIC,6,52,16,8
     EDITTEXT        IDC_TITLE,52,49,109,14,ES_AUTOHSCROLL
+    LTEXT           "Username:",IDC_STATIC,6,68,35,8
     EDITTEXT        IDC_USERNAME,52,65,109,14,ES_AUTOHSCROLL
+    LTEXT           "Password:",IDC_STATIC,6,84,34,8
     EDITTEXT        IDC_PASSWORD,52,81,109,14,ES_PASSWORD | ES_AUTOHSCROLL
+    LTEXT           "Confirm Password:",IDC_STATIC,6,97,34,16
     EDITTEXT        IDC_PASSWORD2,52,98,109,14,ES_PASSWORD | ES_AUTOHSCROLL | 
                     WS_DISABLED
     PUSHBUTTON      "&Show",IDC_SHOWPASSWORD,167,81,37,15,BS_CENTER
-    PUSHBUTTON      "Generate",IDC_RANDOM,219,96,48,14
+    PUSHBUTTON      "&Generate",IDC_RANDOM,219,96,48,14
     CONTROL         "Override Policy",IDC_OVERRIDE_POLICY,"Button",
                     BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,220,111,41,
                     20
+    LTEXT           "Notes:",IDC_STATIC,6,115,22,8
     EDITTEXT        IDC_NOTES,52,114,152,74,ES_MULTILINE | ES_AUTOVSCROLL | 
                     ES_WANTRETURN | WS_VSCROLL
-    PUSHBUTTON      "Password History...",IDC_PWHIST,219,144,48,21,
+    PUSHBUTTON      "&Password History...",IDC_PWHIST,219,144,48,21,
                     BS_MULTILINE
-    PUSHBUTTON      "More >>",IDC_MORE,210,173,64,14
+    PUSHBUTTON      "&More >>",IDC_MORE,210,173,64,14
     DEFPUSHBUTTON   "OK",IDOK,210,33,64,14
     PUSHBUTTON      "Cancel",IDCANCEL,210,49,64,14
     PUSHBUTTON      "Help (F1)",ID_HELP,210,65,64,14
+    LTEXT           "URL:",IDC_STATIC_URL,6,193,18,8
     EDITTEXT        IDC_URL,52,191,152,14,ES_AUTOHSCROLL
+    LTEXT           "Autotype:",IDC_STATIC_AUTO,6,211,31,8
     EDITTEXT        IDC_AUTOTYPE,52,208,109,14,ES_AUTOHSCROLL
-    LTEXT           "Group:",IDC_STATIC,6,36,22,8
-    LTEXT           "Title:",IDC_STATIC,6,52,16,8
-    LTEXT           "Username:",IDC_STATIC,6,68,35,8
-    LTEXT           "Password:",IDC_STATIC,6,84,34,8
-    LTEXT           "Confirm Password:",IDC_STATIC,6,97,34,16
-    LTEXT           "Notes:",IDC_STATIC,6,115,22,8
-    LTEXT           "To edit this entry from the current password file, simply make the desired changes in the fields below.  Note that at least a title and a password are still required.",
-                    IDC_STATIC,6,7,271,19
     GROUPBOX        "Random Password",IDC_STATIC,208,83,68,51
     CONTROL         "",IDC_TOP_HIDEABLE,"Static",SS_ETCHEDHORZ | NOT 
                     WS_VISIBLE,10,190,267,1
-    LTEXT           "URL:",IDC_STATIC_URL,6,193,18,8
-    LTEXT           "Autotype:",IDC_STATIC_AUTO,6,211,31,8
-    LTEXT           "Created on:",IDC_STATIC_CTIME,61,236,39,8
-    LTEXT           "Password last changed on:",IDC_STATIC_PMTIME,13,250,86,
-                    8
-    LTEXT           "Last accessed on:",IDC_STATIC_ATIME,40,264,58,8
-    LTEXT           "Password Expires on:",IDC_STATIC_LTIME,29,301,68,8
-    PUSHBUTTON      "Clear",IDC_LTIME_CLEAR,211,299,22,14
-    PUSHBUTTON      "Set",IDC_LTIME_SET,246,299,22,14
-    LTEXT           "Any field last changed on:",IDC_STATIC_RMTIME,17,278,81,
-                    8
+    PUSHBUTTON      "&Clear",IDC_LTIME_CLEAR,211,299,22,14
+    PUSHBUTTON      "&Set",IDC_LTIME_SET,246,299,22,14
     GROUPBOX        "",IDC_STATIC_DTEXPGROUP,7,292,267,24
     GROUPBOX        "Date/Time Information",IDC_STATIC_DTGROUP,6,226,271,65
-    CONTROL         "Whenever",IDC_CTIME,"Static",SS_SIMPLE | WS_GROUP,104,
-                    236,106,10
-    CONTROL         "Whenever",IDC_PMTIME,"Static",SS_SIMPLE | WS_GROUP,104,
-                    250,106,10
-    CONTROL         "Whenever",IDC_ATIME,"Static",SS_SIMPLE | WS_GROUP,104,
-                    264,106,10
-    CONTROL         "Whenever",IDC_RMTIME,"Static",SS_SIMPLE | WS_GROUP,104,
-                    278,106,10
-    LTEXT           "Whenever",IDC_LTIME,104,301,106,10
+    LTEXT           "Created on:",IDC_STATIC_CTIME,61,236,39,8
+    EDITTEXT        IDC_CTIME,104,236,106,10,ES_READONLY | NOT WS_BORDER
+    LTEXT           "Password last changed on:",IDC_STATIC_PMTIME,13,250,86,
+                    8
+    EDITTEXT        IDC_PMTIME,104,250,106,10,ES_READONLY | NOT WS_BORDER
+    LTEXT           "Last accessed on:",IDC_STATIC_ATIME,40,264,58,8
+    EDITTEXT        IDC_ATIME,104,264,106,10,ES_READONLY | NOT WS_BORDER
+    LTEXT           "Any field last changed on:",IDC_STATIC_RMTIME,17,278,81,
+                    8
+    EDITTEXT        IDC_RMTIME,104,278,106,10,ES_READONLY | NOT WS_BORDER
+    LTEXT           "Password Expires on:",IDC_STATIC_LTIME,29,301,68,8
+    EDITTEXT        IDC_LTIME,104,301,106,10,ES_READONLY | NOT WS_BORDER
     CONTROL         "",IDC_BOTTOM_HIDEABLE,"Static",SS_ETCHEDHORZ | NOT 
                     WS_VISIBLE,14,322,251,1
 END
